--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
     <!-- Section 3 -->
 
-    <section class="Section__3 Section Section">
+       <section class="Section__3 Section Section">
       <h1 class="SpecialHeading">
         How Will<span class="headingSpecial"> it be</span>
       </h1>
@@ -219,24 +219,26 @@
             </p>
           </div>
           <div class="box2">
-            <h4>What is Lorem Ipsum?</h4>
+            <h4>Create shocking experiences</h4>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry.
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
             </p>
           </div>
           <div class="box2">
-            <h4>What is Lorem Ipsum?</h4>
+            <h4>Where does it come from?</h4>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry.
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
             </p>
           </div>
           <div class="box2">
-            <h4>What is Lorem Ipsum?</h4>
+            <h4>Where can I get some?</h4>
             <p>
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry.
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour.
             </p>
           </div>
         </div>
