--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
     <!-- Section 3 -->
 
-       <section class="Section__3 Section Section">
+    <section class="Section__3 Section Section">
       <h1 class="SpecialHeading">
         How Will<span class="headingSpecial"> it be</span>
       </h1>
@@ -395,6 +395,7 @@
       <p>copyright@2025 Asharaf Ali K A</p>
     </div>
 
+    <button id="scrollTopBtn">⬆</button>
     <script src="script.js"></script>
   </body>
 </html>
